# data-prep-kit

./: .gitignore  .make.defaults  .make.versions  404.html  ADVANCED.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  RELEASE.md  index.html  mkdocs.yml  release-notes.md  resources.md
.github/: mkdocs_hook.py
transforms/: .make.cicd.targets  .make.transforms  .make.workflows  Dockerfile.python.template  Dockerfile.ray.template  Dockerfile.spark.template  Makefile  Makefile.kfp.template  Makefile.transform.template  README-list.md  README.md  README.md.template  index.html  pyproject.toml  requirements-ray.txt  requirements.txt  transforms-1.0-lang-Windows.ipynb  transforms-1.0-lang-ray-Windows.ipynb  transforms-1.0-lang-ray.ipynb  transforms-1.0-lang.ipynb  transforms-dev1-testing.ipynb
transforms/README-list/: index.html
transforms/add_new_kfp_workflow/: index.html
transforms/code/code2parquet/: index.html
transforms/code/code2parquet/kfp_ray/: code2parquet_wf.py  index.html
transforms/code/code2parquet/python/: README.md  index.html  pyproject.toml  requirements.txt
transforms/code/code2parquet/ray/: Dockerfile  README.md  index.html  pyproject.toml
transforms/code/code_profiler/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  requirements.txt
transforms/code/code_profiler/dpk_code_profiler/: output_data-prep-kit.sl.cloud9.ibm.com_20250127-100245-529.json  profiler_report.py  transform.py
transforms/code/code_profiler/python/: pyproject.toml  requirements.txt
transforms/code/code_profiler/ray/: Dockerfile  pyproject.toml
transforms/code/code_profiler/test/: test_code_profiler.py  test_code_profiler_python.py  test_code_profiler_ray.py
transforms/code/code_quality/: index.html
transforms/code/code_quality/kfp_ray/: code_quality_wf.py  index.html
transforms/code/code_quality/python/: README.md  index.html  pyproject.toml  requirements.txt
transforms/code/code_quality/ray/: Dockerfile  README.md  index.html  pyproject.toml
transforms/code/header_cleanser/: README.md  header_cleanser.ipynb  index.html
transforms/code/header_cleanser/kfp_ray/: header_cleanser_wf.py  index.html
transforms/code/header_cleanser/notebooks/: header_cleanser.ipynb
transforms/code/license_select/: index.html
transforms/code/malware/: index.html
transforms/code/proglang_select/: index.html
transforms/code/repo_level_ordering/: index.html
transforms/language/doc_chunk/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  doc_chunk-python.ipynb  doc_chunk-ray.ipynb  index.html  requirements.txt
transforms/language/doc_quality/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  doc_quality-ray.ipynb  doc_quality.ipynb  index.html  requirements.txt
transforms/language/extreme_tokenized/: Hajar_test.ipynb  README.md  extreme_tokenized_python.ipynb  extreme_tokenized_ray.ipynb  index.html  requirements.txt
transforms/language/gneissweb_classification/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  gneissweb_classification-ray.ipynb  gneissweb_classification.ipynb  index.html  requirements.txt
transforms/language/html2parquet/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  html2parquet.ipynb  index.html  requirements.txt
transforms/language/lang_id/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  lang_id-ray.ipynb  lang_id.ipynb  requirements.txt
transforms/language/pdf2parquet/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  pdf2parquet-python.ipynb  pdf2parquet-ray.ipynb  pdf2parquet.ipynb  requirements.txt
transforms/language/pii_redactor/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  piiredactor-ray.ipynb  piiredactor.ipynb  requirements.txt
transforms/language/readability/: Dockerfile.ray  README.md  index.html  readability_python.ipynb  readability_ray.ipynb  requirements.txt
transforms/language/similarity/: Dockerfile.python  Makefile  README.md  index.html  requirements.txt  similarity.ipynb  transform.config
transforms/language/text_encoder/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  text_encoder-python.ipynb  text_encoder-ray.ipynb
transforms/transforms-1.0/: transforms-1.0-lang.ipynb
transforms/universal/bloom/: README.md  bf.bloom  bloom_python.ipynb  bloom_python_HuggingFace.ipynb  index.html  requirements.txt
transforms/universal/doc_id/: Dockerfile.python  Dockerfile.ray  Dockerfile.spark  Makefile  README.md  doc_id-ray.ipynb  doc_id.ipynb  index.html
transforms/universal/ededup/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  ededup-python.ipynb  ededup-ray.ipynb  ededup.ipynb  index.html  requirements.txt
transforms/universal/fdedup/: Dockerfile.python  Dockerfile.ray  Dockerfile.spark  Makefile  README.md  fdedup_python.ipynb  fdedup_ray.ipynb  fdedup_spark.ipynb  index.html  requirements.txt
transforms/universal/filter/: Dockerfile.python  Dockerfile.ray  Dockerfile.spark  Makefile  README.md  filter-ray.ipynb  filter.ipynb  index.html  requirements.txt
transforms/universal/hap/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  hap_python.ipynb  index.html  requirements.txt
transforms/universal/noop/: Dockerfile.ray  Makefile  README.md  index.html  requirements.txt
transforms/universal/profiler/: .dockerignore  Makefile  README.md  index.html  profiler-python.ipynb  profiler-ray.ipynb  requirements.txt
transforms/universal/rep_removal/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  rep_removal.ipynb  requirements.txt
transforms/universal/resize/: Dockerfile.ray  Makefile  README.md  index.html  resize-ray.ipynb  resize.ipynb
transforms/universal/tokenization/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  requirements.txt  tokenization-ray.ipynb  tokenization.ipynb
transforms/universal/tokenization2arrow/: Dockerfile.python  Dockerfile.ray  Makefile  README.md  index.html  requirements.txt  tokenization2arrow-ray.ipynb  tokenization2arrow.ipynb
transforms/universal/web2parquet/: index.html  requirements.txt
(+690 files in other folders)
